--- a/uploadDemo/package.json
+++ b/uploadDemo/package.json
@@ -4,7 +4,8 @@
   "description": "for uploading files",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "author": "saurabh singh",
   "license": "ISC",
