--- a/uploadDemo/public/bower.json
+++ b/uploadDemo/public/bower.json
@@ -13,5 +13,10 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+"dependencies": {
+    "angular": "^1.7.8",
+    "ng-file-upload": "^12.2.13"
+  }
+
 }
